fix color on mobile button for sdg0

--- a/src/Components/Icon/_iconMobile.scss
+++ b/src/Components/Icon/_iconMobile.scss
@@ -55,10 +55,3 @@ $class-slug: sdg !default;
 	text-align: left;
 	text-transform: uppercase;
 }
-
-
-.sdg0  {
-	.mobileSdgName, .mobileSdgNumber {
-		color: $unblue;
-	}
-}
