--- a/src/styles/_utils.scss
+++ b/src/styles/_utils.scss
@@ -23,8 +23,10 @@ $dark-grey: #2a2a2a;
 $light-grey: #7e7e7e;
 $lighter-grey: #d8d8d8;
 $unblue: #29abe2;
+$iloblue: #37468E;
 
-/* Global Goals */
+/* -- Global Goals -- */
+
 $sdgrey: #f1f1f1;
 $goal1color: #e5243b;
 $goal2color: #dda63a;
@@ -45,5 +47,5 @@ $goal16color: #00689d;
 $goal17color: #19486a;
 
 /* Colors List */
-$colors-list: #f1f1f1, #e5243b, #dda63a, #4c9f38, #c5192d, #ff3a21, #26bde2, #fcc30b, #a21942, #fd6925, #dd1367, #fd9d24,
+$colors-list: #37468e, #e5243b, #dda63a, #4c9f38, #c5192d, #ff3a21, #26bde2, #fcc30b, #a21942, #fd6925, #dd1367, #fd9d24,
 #bf8b2e, #3f7e44, #0a97d9, #56c02b, #00689d, #19486a;
